Update .alias.sh